--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,35 +1,38 @@
 <html>
-	<title>
-	</title>
+	<title>Fly 490</title>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
-	<body>
-		<h1> FLY 490 </h1>
+<body>
+	
+<img src="images/Scanner.png" alt="AirPlane">
+<h1> FLY 490 </h1>
                
-
-		<form  action="loginReq.php" method="POST">
+	<div class="form_background">
+	<form  action="loginReq.php" method="POST" class="form">
+		<div class="form-group row">
 		<label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
-                                <div class="col-md-6">
-                                    <input type="text" id="username" class="form-control" name="username" required autofocus>
-                                </div>
-                            </div>
+                	<div class="col-md-6">
+                		<input type="text" id="username" class="form-control" name="username" required autofocus>
+                	</div>
+                </div>
 
-                            <div class="form-group row">
-                                <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                                <div class="col-md-6">
-                                    <input type="password" id="password" class="form-control" name="password" required>
-                                </div>
-                            </div>
+                <div class="form-group row">
+                	<label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                        <div class="col-md-6">
+                        	<input type="password" id="password" class="form-control" name="password" required>
+                        </div>
+                </div>
 
-                            <div class="form-group row">
-                                <div class="col-md-6 offset-md-4">
-                                    <div class="checkbox"
-                                </div>
-                            </div>
+                <div class="col-md-6 offset-md-4">
+                	<input type="submit" name ="submit" class="btn btn-primary" value ="Login">
+                </div>
 
-                            <div class="col-md-6 offset-md-4">
-                                <input type="submit" name ="submit" class="btn btn-primary" value ="Login">
-                            </div>
-	</body>
+		<div class="register_link">
+			<a href="register_page.html">Register Now</a>
+		</div>
+	</form>
+	</div>
+</body>
 
 </html>
